// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> renders disabled accordion 1`] = `
.emotion-0 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  width: 100%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 1rem;
}

.emotion-6 {
  max-height: 0px;
  overflow: hidden;
  -webkit-transition: max-height 350ms ease-in-out;
  transition: max-height 350ms ease-in-out;
}

.emotion-8 {
  border: 1px solid #ededf0;
  width: 100%;
  opacity: 0.4;
  background-color: #ededf0;
  border-color: #c3c0cd;
}

.emotion-8:not(:last-child) {
  border-bottom: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: not-allowed;
}

<div
  className="emotion-8 emotion-9"
  disabled={true}
>
  <div
    className="emotion-4 emotion-5"
    disabled={true}
    onClick={[Function]}
  >
    <div
      className="emotion-0 emotion-1"
    >
      <div>
        title
      </div>
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      <svg
        fill="#332e54"
        height={8}
        rotate={0}
        width={8}
      />
    </div>
  </div>
  <div
    className="emotion-6 emotion-7"
  >
    <div>
      <div>
        expansion
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> renders no border accordion 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
}

.emotion-0 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  width: 100%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 1rem;
}

.emotion-6 {
  max-height: 0px;
  overflow: hidden;
  -webkit-transition: max-height 350ms ease-in-out;
  transition: max-height 350ms ease-in-out;
}

.emotion-8 {
  width: 100%;
}

.emotion-8:not(:last-child) {
  border-bottom: none;
}

<div
  className="emotion-8 emotion-9"
  disabled={false}
>
  <div
    className="emotion-4 emotion-5"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="emotion-0 emotion-1"
    >
      <div>
        title
      </div>
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      <svg
        fill="#332e54"
        height={8}
        rotate={0}
        width={8}
      />
    </div>
  </div>
  <div
    className="emotion-6 emotion-7"
  >
    <div>
      <div>
        expansion
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> renders regular accordion 1`] = `
.emotion-8 {
  border: 1px solid #ededf0;
  width: 100%;
}

.emotion-8:not(:last-child) {
  border-bottom: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
}

.emotion-0 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  width: 100%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 1rem;
}

.emotion-6 {
  max-height: 0px;
  overflow: hidden;
  -webkit-transition: max-height 350ms ease-in-out;
  transition: max-height 350ms ease-in-out;
}

<div
  className="emotion-8 emotion-9"
  disabled={false}
>
  <div
    className="emotion-4 emotion-5"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="emotion-0 emotion-1"
    >
      <div>
        title
      </div>
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      <svg
        fill="#332e54"
        height={8}
        rotate={0}
        width={8}
      />
    </div>
  </div>
  <div
    className="emotion-6 emotion-7"
  >
    <div>
      <div>
        expansion
      </div>
    </div>
  </div>
</div>
`;
